@@ -2601,6 +2601,7 @@ begin_function
 name|int
 name|create_local_accept_sock
 parameter_list|(
+specifier|const
 name|char
 modifier|*
 name|path
@@ -2620,21 +2621,34 @@ name|struct
 name|sockaddr_un
 name|sun
 decl_stmt|;
+ifdef|#
+directive|ifdef
+name|HAVE_STRUCT_SOCKADDR_UN_SUN_LEN
+comment|/* this member exists on BSDs, not Linux */
 name|sun
 operator|.
 name|sun_len
 operator|=
+operator|(
+name|sa_family_t
+operator|)
 sizeof|sizeof
 argument_list|(
 name|sun
 argument_list|)
 expr_stmt|;
+endif|#
+directive|endif
 name|sun
 operator|.
 name|sun_family
 operator|=
 name|AF_LOCAL
 expr_stmt|;
+comment|/* length is 92-108, 104 on FreeBSD */
+operator|(
+name|void
+operator|)
 name|strlcpy
 argument_list|(
 name|sun
@@ -2643,7 +2657,12 @@ name|sun_path
 argument_list|,
 name|path
 argument_list|,
-literal|104
+sizeof|sizeof
+argument_list|(
+name|sun
+operator|.
+name|sun_path
+argument_list|)
 argument_list|)
 expr_stmt|;
 if|if
@@ -2726,6 +2745,9 @@ operator|)
 operator|&
 name|sun
 argument_list|,
+operator|(
+name|socklen_t
+operator|)
 sizeof|sizeof
 argument_list|(
 expr|struct
@@ -2801,6 +2823,12 @@ operator|-
 literal|1
 return|;
 block|}
+operator|(
+name|void
+operator|)
+name|noproto
+expr_stmt|;
+comment|/*unused*/
 return|return
 name|s
 return|;
