@@ -492,12 +492,18 @@ block|{
 name|char
 modifier|*
 name|s_cert
+init|=
+name|NULL
 decl_stmt|,
 modifier|*
 name|c_key
+init|=
+name|NULL
 decl_stmt|,
 modifier|*
 name|c_cert
+init|=
+name|NULL
 decl_stmt|;
 name|SSL_CTX
 modifier|*
@@ -919,15 +925,26 @@ name|sun_family
 operator|=
 name|AF_LOCAL
 expr_stmt|;
+ifdef|#
+directive|ifdef
+name|HAVE_STRUCT_SOCKADDR_UN_SUN_LEN
 name|sun
 operator|->
 name|sun_len
 operator|=
+operator|(
+name|sa_family_t
+operator|)
 sizeof|sizeof
 argument_list|(
 name|sun
 argument_list|)
 expr_stmt|;
+endif|#
+directive|endif
+operator|(
+name|void
+operator|)
 name|strlcpy
 argument_list|(
 name|sun
@@ -936,11 +953,19 @@ name|sun_path
 argument_list|,
 name|svr
 argument_list|,
-literal|104
+sizeof|sizeof
+argument_list|(
+name|sun
+operator|->
+name|sun_path
+argument_list|)
 argument_list|)
 expr_stmt|;
 name|addrlen
 operator|=
+operator|(
+name|socklen_t
+operator|)
 sizeof|sizeof
 argument_list|(
 expr|struct
