@@ -1051,6 +1051,12 @@ name|UNBOUND_CONTROL_PORT
 expr_stmt|;
 name|cfg
 operator|->
+name|remote_control_use_cert
+operator|=
+literal|1
+expr_stmt|;
+name|cfg
+operator|->
 name|minimal_responses
 operator|=
 literal|0
@@ -5001,72 +5007,6 @@ return|return
 literal|0
 return|;
 block|}
-ifdef|#
-directive|ifdef
-name|HAVE_GETPWNAM
-comment|/* translate username into uid and gid */
-if|if
-condition|(
-name|cfg
-operator|->
-name|username
-operator|&&
-name|cfg
-operator|->
-name|username
-index|[
-literal|0
-index|]
-condition|)
-block|{
-name|struct
-name|passwd
-modifier|*
-name|pwd
-decl_stmt|;
-if|if
-condition|(
-operator|(
-name|pwd
-operator|=
-name|getpwnam
-argument_list|(
-name|cfg
-operator|->
-name|username
-argument_list|)
-operator|)
-operator|==
-name|NULL
-condition|)
-name|log_err
-argument_list|(
-literal|"user '%s' does not exist."
-argument_list|,
-name|cfg
-operator|->
-name|username
-argument_list|)
-expr_stmt|;
-name|cfg
-operator|->
-name|uid
-operator|=
-name|pwd
-operator|->
-name|pw_uid
-expr_stmt|;
-name|cfg
-operator|->
-name|gid
-operator|=
-name|pwd
-operator|->
-name|pw_gid
-expr_stmt|;
-block|}
-endif|#
-directive|endif
 return|return
 literal|1
 return|;
@@ -7373,6 +7313,85 @@ operator|->
 name|log_time_ascii
 argument_list|)
 expr_stmt|;
+block|}
+end_function
+
+begin_function
+name|void
+name|config_lookup_uid
+parameter_list|(
+name|struct
+name|config_file
+modifier|*
+name|cfg
+parameter_list|)
+block|{
+ifdef|#
+directive|ifdef
+name|HAVE_GETPWNAM
+comment|/* translate username into uid and gid */
+if|if
+condition|(
+name|cfg
+operator|->
+name|username
+operator|&&
+name|cfg
+operator|->
+name|username
+index|[
+literal|0
+index|]
+condition|)
+block|{
+name|struct
+name|passwd
+modifier|*
+name|pwd
+decl_stmt|;
+if|if
+condition|(
+operator|(
+name|pwd
+operator|=
+name|getpwnam
+argument_list|(
+name|cfg
+operator|->
+name|username
+argument_list|)
+operator|)
+operator|==
+name|NULL
+condition|)
+name|log_err
+argument_list|(
+literal|"user '%s' does not exist."
+argument_list|,
+name|cfg
+operator|->
+name|username
+argument_list|)
+expr_stmt|;
+name|cfg
+operator|->
+name|uid
+operator|=
+name|pwd
+operator|->
+name|pw_uid
+expr_stmt|;
+name|cfg
+operator|->
+name|gid
+operator|=
+name|pwd
+operator|->
+name|pw_gid
+expr_stmt|;
+block|}
+endif|#
+directive|endif
 block|}
 end_function
 
